--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -4,6 +4,7 @@
 - sTask->schedule now returns the sTaskRun object on success
 - Fix several issues when sTaskRun.data isn't an array (#15, #18)
 - Use configured manager_date_format and manager_time_format for the date/time displayed in the component (#16)
+- Fix adding non-snippet tasks due to validation (#13)
 
 ++ Scheduler 1.0.2-pl
 ++ Released on 2014-05-29
