--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -1,5 +1,5 @@
 ++ Scheduler 1.1.0-pl
-++ Released on
+++ Released on 2015-05-29
 +++++++++++++++++++++++++
 - sTask->schedule now returns the sTaskRun object on success
 - Add option to schedule a task from the task context menu (#11)
