Fix incorrect processor names with new case sensitivity in 3.0

--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -1,7 +1,8 @@
-++ Scheduler 2.0.0-pl
+++ Scheduler 1.2.0-pl
 ++ Released on 2019-12-22
 +++++++++++++++++++++++++
 - Fix use of old modAction-based routing, removed in 3.0
+- Fix incorrect processor names with new case sensitivity in 3.0
 
 ++ Scheduler 1.1.0-pl
 ++ Released on 2015-05-29
