--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -1,13 +1,13 @@
 Scheduler 1.2.0-pl
 ------------------
-Released on 2019-12-22
+Released on 2020-01-03
 
 - Fix use of old modAction-based routing, removed in 3.0
 - Fix incorrect processor names with new case sensitivity in 3.0
 - Improve display of grids in MODX3 to better fit with the gear icon
 - Better handle Error/Exceptions triggered by a task
 - Make sure modError service is loaded
-- Send an email when a task run fails [#14]
+- Send an email when a task run fails to configured address (scheduler.email_failure setting) [#14]
 
 Scheduler 1.1.0-pl
 ------------------
