changelog/version (not sure why build.transport.php version was 1.3.0; changelog was 1.2.x, as are installed/available versions)

--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -1,3 +1,11 @@
+Scheduler 1.2.1-pl
+------------------
+Released on 2021-02-xx
+
+- Add task_key field to sTaskRun, to allow setting/searching/indexing of small pieces of data. Among other things,
+  this allows outside extras to retrieve and act on task runs more easily.
+
+
 Scheduler 1.2.0-pl
 ------------------
 Released on 2020-01-03
