Add a bunch of missing indices #25

--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -2,8 +2,8 @@ Scheduler 1.2.1-pl
 ------------------
 Released on 2021-02-xx
 
-- Add task_key field to sTaskRun, to allow setting/searching/indexing of small pieces of data. Among other things,
-  this allows outside extras to retrieve and act on task runs more easily.
+- Add indices for various fields used for searching and filtering, should improve performance on sites with a large history substantially
+- Add task_key field to sTaskRun, to allow setting/searching/indexing of small pieces of data. Among other things, this allows outside extras to retrieve and act on task runs more easily.
 
 
 Scheduler 1.2.0-pl
