--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -1,5 +1,6 @@
 - Apply some left padding to the stats bar in the component
 - Apply formatting to the stats bar to make it easier to read thousands/millions
+- Show average processing time on the tasks list
 
 Scheduler 1.3.0-pl
 ------------------
