--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -1,3 +1,9 @@
+Scheduler 1.4.1-pl
+------------------
+Released on 2022-12-15
+
+- Add russian translation
+
 Scheduler 1.4.0-pl
 ------------------
 Released on 2021-06-25
