--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -1,3 +1,11 @@
+Scheduler 1.5.0-pl
+------------------
+Released on 2023-12-17
+
+- Add correct icon to menu
+- Add posibility to remove old runs
+- Add file browser for task with type as file
+
 Scheduler 1.4.1-pl
 ------------------
 Released on 2022-12-16
