--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -1,3 +1,9 @@
+Scheduler 1.6.0-pl
+------------------
+Released on 2025-01-16
+
+- Add support MODX 3
+
 Scheduler 1.5.0-pl
 ------------------
 Released on 2023-12-17
