--- a/core/components/scheduler/docs/changelog.txt
+++ b/core/components/scheduler/docs/changelog.txt
@@ -2,6 +2,7 @@ Scheduler 1.9.0-pl
 ------------------
 Released on 2026-01-22
 
+- Make sTaskRun constants public, and standardise code style
 - Add $task_key property to the sTask::schedule method to more easily set that [#40]
 - Add recurring tasks support: tasks can automatically reschedule after successful execution
 - Add `scheduleNext()` method to sTask for automatic rescheduling
